Changes in Caudium 1.3 since Caudium 1.2.1
------------------------------------------
- Added string hash module.
- Added support in VHS Sql to use Caudium system log directory instead of      
  userdir one.
- index.php and index.php3 now added in all directories modules.
- Added support for RFC 3236 (XHTML media type)
- Fix an error when PUT method is used...
- Variable HTTPS is set to "on" when SSL is used. (compatibility variable 
  used for CGIs...)
- Webdav protocol implementation (RFC 2518) added. Not finished yet
- Added a -DMAX_BODY_SIZE=<size> option for starting caudium. The default size
  for the body is 16k otherwise. 
- Updated the error message that occured when the user want to list the open 
  ports in the CIF and Caudium does not run as root.
- svg/svgz file image format handling.
- Fix a problem when Caudium is not running as root : display a warning if 
  the user tries to run lsof in open ports action tab.
- The Generate a self signed certificate and a RSA key-pair was not delivering
  any warning to the user. Now it displays in red on the HTML output.
- Added a link to the caudium.info website from the CIF.
- 404 handler is not set per default on Old 404 system. To avoid 1.0 -> 1.2    
  compatiblity and keep the XML-Compliant parser quiet. 
- Fixed #530674: passive mode FTP connection problem (with Mozilla  
  and derivative browsers).
- <if exists="file"> shouldn't use the cache. Thanks ot Hirling Endre.
- The start script now changes the cwd to the directory it is started from.
  Prevents beginners from crying.
- Fixed bug #547354 - <aconf> URIs don't work
- Fixed bug #542177 that makes incorrect listings from directories2.pike.
- Fixed bug #514391 (user listing in userfs), seems that Caudium Cache.
- Fixed bug #533861 <wizard> was broken. Autodocs now added, new features like
  formname attribute to wizard conatiner, hidden "verify" container.
- SSL.pmod used is the one from Pike now. This verification is now done