@@ -5,5 +5,5 @@ if [ -x /usr/local/bin/autoconf213 ];
 then
   autoconf213 --localdir=$1
 else
-  autoconf --localdir=$1
+  autoconf --include=$1
 fi
